/*
 * $Id: ChangeLog,v 1.2497 2004/03/05 15:22:48 andijahja Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2004-03-05 12:51 UTC-0300 Luiz Rafael Culik Guimaraes <culikr@brturbo.com>
  * source/rdd/dbcmd.c
    ! minor fix to GetTheOtherArea function

2004-03-05 22:30 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/math.c
    ! TABS -> spaces
    % out usage hb_itemNew(NULL)

  * source/rtl/win32ole.prg
    ! change hb_stack.Return with macro (HB_VM_STACK).Return

2004-03-05 20:30 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/vm/extend.c
  * source/rtl/inkey.c
  * source/rtl/transfrm.c
    % optimization using HB_ITEM

2004-03-05 08:56 UTC-0300 Antonio Carlos Pantaglione <toninho@fwi.com.br>
  * source/vm/hbini.prg
    ! Fixed problems when read an INI file.
    % optmizations, code formatiing.

2004-03-05 16:00 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/tprinter.c
  * source/vm/arrayshb.c
  * source/vm/classes.c
    % optimizated using HB_ITEM

2004-03-05 05:32 UTC-0300 Marcelo Lombardo <marcelo@xharbour.com.br>
  * make_b32.bat
    ! Fixed to do not delete 3rd party libs when make clean
      Thanks to Eduardo Fernandes

2004-03-05 13:45 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/vm/memvars.c
    ! fix memory leak in __MVSYMBOLINFO()
    % some left out optimization using HB_ITEM

2004-03-04 21:13 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/regex.c
    ! Fixed typo in Wild2RegEx() related to '?'

  * source/vm/arrays.c
    ! Fixed memory leak related to Owners and hb_clsFinalize()

  * source/vm/memvars.c
    + Added logic to utilize Wild2RegEx() sincehb_strMatchRegExp() now expect real RegEx.

2004-03-05 05:35 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/direct.c
    % Ref my previous changes. I commited the wrong file :(.